--- a/BlogposterCMS/public/assets/scss/components/_content-area.scss
+++ b/BlogposterCMS/public/assets/scss/components/_content-area.scss
@@ -1,5 +1,5 @@
 #content {
-  overflow: hidden;
+  overflow: auto;
   flex: 1 1 0;
   min-width: 0;
   width: 100%;
@@ -22,14 +22,14 @@
     box-sizing: content-box;
   }
 
+
 .canvas-grid,
 .pixel-grid {
-  width: 100%;
   min-height: 300px;
   position: relative;
   background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(8px);
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: visible;
   height: auto;
     background-image: radial-gradient(
