--- a/BlogposterCMS/public/assets/scss/site.scss
+++ b/BlogposterCMS/public/assets/scss/site.scss
@@ -1,44 +1,44 @@
-@import 'pages/login';
-@import 'components/forms';
-@import 'pages/install';
-@import 'pages/admin';
-@import 'components/content-area';
-@import 'fonts';
-@import 'variables';
-@import 'global';
-@import 'components/buttons';
-@import 'components/custom-select';
-@import 'components/color-picker';
-@import 'cards';
-@import 'responsive';
-@import 'components/sidebar-bubble';
-@import 'components/floating-labels';
-@import 'components/header-main';
-@import 'components/top-header';
-@import 'components/notification-hub';
-@import 'components/content-header';
-@import 'components/inline-add';
-@import 'pages/pages';
-@import 'pages/media';
-@import 'pages/settings';
-@import 'pages/system-settings';
-@import 'pages/login-strategies';
-@import 'pages/fonts';
-@import 'pages/login-strategy-edit';
-@import 'pages/modules';
-@import 'pages/content';
-@import 'components/heading-widget';
-@import 'components/page-editor';
-@import 'components/page-content';
-@import 'components/text-editor-toolbar';
-@import 'components/basic-widgets';
-@import 'components/widget-options';
-@import 'pages/users';
-@import 'pages/permissions';
-@import 'pages/widgets';
-@import 'pages/news';
-@import 'pages/news-item';
-@import 'components/widgets-panel';
-@import 'components/grid-mode';
+@use 'pages/login';
+@use 'components/forms';
+@use 'pages/install';
+@use 'pages/admin';
+@use 'components/content-area';
+@use 'fonts';
+@use 'variables';
+@use 'global';
+@use 'components/buttons';
+@use 'components/custom-select';
+@use 'components/color-picker';
+@use 'cards';
+@use 'responsive';
+@use 'components/sidebar-bubble';
+@use 'components/floating-labels';
+@use 'components/header-main';
+@use 'components/top-header';
+@use 'components/notification-hub';
+@use 'components/content-header';
+@use 'components/inline-add';
+@use 'pages/pages';
+@use 'pages/media';
+@use 'pages/settings';
+@use 'pages/system-settings';
+@use 'pages/login-strategies';
+@use 'pages/fonts' as fonts2;
+@use 'pages/login-strategy-edit';
+@use 'pages/modules';
+@use 'pages/content';
+@use 'components/heading-widget';
+@use 'components/page-editor';
+@use 'components/page-content';
+@use 'components/text-editor-toolbar';
+@use 'components/basic-widgets';
+@use 'components/widget-options';
+@use 'pages/users';
+@use 'pages/permissions';
+@use 'pages/widgets';
+@use 'pages/news';
+@use 'pages/news-item';
+@use 'components/widgets-panel';
+@use 'components/grid-mode';
 
-@import 'components/home-widgets';
+@use 'components/home-widgets';
