--- a/BlogposterCMS/public/assets/scss/pages/_system-settings.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_system-settings.scss
@@ -1,13 +1,15 @@
+@use './base' as p;
+
 .system-settings-card {
-  @extend .page-list-card;
+  @include p.page-list-card;
 }
 
 .system-settings-title-bar {
-  @extend .page-title-bar;
+  @include p.page-title-bar;
 }
 
 .system-settings-title {
-  @extend .page-title;
+  @include p.page-title;
 }
 
 .system-settings-card label {
