--- a/BlogposterCMS/public/assets/scss/pages/_widgets.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_widgets.scss
@@ -1,25 +1,27 @@
+@use './base' as p;
+
 .widget-list-card {
-  @extend .page-list-card;
+  @include p.page-list-card;
 }
 
 .widget-title-bar {
-  @extend .page-title-bar;
+  @include p.page-title-bar;
 }
 
 .widget-title {
-  @extend .page-title;
+  @include p.page-title;
 }
 
 .widget-list {
-  @extend .page-list;
+  @include p.page-list;
 }
 
 .widget-list .empty-state {
-  @extend %page-list-empty-state;
+  @include p.page-list-empty-state;
 }
 
 .widget-list li {
-  @extend %page-list-item;
+  @include p.page-list-item;
   display: flex;
   align-items: center;
   gap: 8px;
