--- a/BlogposterCMS/public/assets/scss/pages/_news-item.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_news-item.scss
@@ -1,11 +1,9 @@
-@use './base' as p;
-
 .news-detail-card {
-  @include p.page-list-card;
+  @extend .page-list-card;
 }
 
 .news-detail-title {
-  @include p.page-title;
+  @extend .page-title;
   margin-bottom: 1rem;
 }
 
