--- a/BlogposterCMS/public/assets/scss/pages/_news.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_news.scss
@@ -1,15 +1,13 @@
-@use './base' as p;
-
 .news-list-card {
-  @include p.page-list-card;
+  @extend .page-list-card;
 }
 
 .news-title-bar {
-  @include p.page-title-bar;
+  @extend .page-title-bar;
 }
 
 .news-title {
-  @include p.page-title;
+  @extend .page-title;
 }
 
 .news-controls {
@@ -19,15 +17,15 @@
 }
 
 .news-list {
-  @include p.page-list;
+  @extend .page-list;
 }
 
 .news-list .empty-state {
-  @include p.page-list-empty-state;
+  @extend %page-list-empty-state;
 }
 
 .news-list li {
-  @include p.page-list-item;
+  @extend %page-list-item;
 }
 
 .news-list li a {
