--- a/BlogposterCMS/public/assets/scss/pages/_system-settings.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_system-settings.scss
@@ -1,15 +1,13 @@
-@use './base' as p;
-
 .system-settings-card {
-  @include p.page-list-card;
+  @extend .page-list-card;
 }
 
 .system-settings-title-bar {
-  @include p.page-title-bar;
+  @extend .page-title-bar;
 }
 
 .system-settings-title {
-  @include p.page-title;
+  @extend .page-title;
 }
 
 .system-settings-card label {
