--- a/BlogposterCMS/apps/designer/assets/scss/_publish-popup.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/_publish-popup.scss
@@ -1,4 +1,4 @@
-/* Publish popup slides in from the right with a backdrop */
+/* Publish popup slides in from the right without a backdrop */
 .publish-popup {
   position: fixed;
   right: 0;
@@ -43,19 +43,5 @@
   .publish-actions {
     margin-top: 0.5rem;
     text-align: right;
-  }
-}
-
-.publish-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.3);
-  z-index: 1000;
-
-  &.hidden {
-    display: none;
   }
 }
