--- a/BlogposterCMS/apps/designer/assets/scss/_publish-popup.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/_publish-popup.scss
@@ -14,6 +14,17 @@
     display: none;
   }
 
+  .publish-close {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 1.25rem;
+    line-height: 1;
+  }
+
   .publish-suggestions {
     max-height: 150px;
     overflow-y: auto;
